crates/biome_cli/tests/snapshots/main_cases_preset/preset_recommended_does_not_enable_nursery_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "recommended"
    }
  }
}
```

## `test.js`

```js
for (let i = 0; i < 10; i++) {
    if (i === 5) {
        continue;
    }
}

```

# Emitted Messages

```block
test.js:3:9 lint/complexity/noUselessContinue  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Unnecessary continue statement
  
    1 │ for (let i = 0; i < 10; i++) {
    2 │     if (i === 5) {
  > 3 │         continue;
      │         ^^^^^^^^^
    4 │     }
    5 │ }
  
  i Safe fix: Delete the unnecessary continue statement
  
    1 1 │   for (let i = 0; i < 10; i++) {
    2 2 │       if (i === 5) {
    3   │ - ········continue;
    4 3 │       }
    5 4 │   }
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 info.
```
