crates/biome_cli/tests/snapshots/main_cases_preset/preset_recommended_enables_recommended_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe test.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "recommended"
    }
  }
}
```

## `test.js`

```js


```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
